Addition of first hw assignment and link to it

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,10 +2,23 @@
 <html lang="en">
   <head>
     <meta charset ="utf-8">
-    <title> Portfolio</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <header>
       <h1>List of Projects</h1>
     </header>
+    <nav>
+      <ul>
+        <li><a href="week-1-hw.html">Week 1-Semantic Elements</a></li>
+        <li><a href="about-me.html">About Me</a></li>
+      </ul>
+    </nav>
+    <main>
+      <br/>
+      <h2>Screenshot and Snippets of Projects</h2>
+      Week 1-Semantic Elements<br/><img src="week-1-hw.jpg" alt="Week 1 HW Screenshot" width="500">
+
+    </main>
   </body>
+</html>
