--- a/about-me.html
+++ b/about-me.html
@@ -8,12 +8,17 @@
     <header>
       <h1>About Me</h1>
     </header>
-    <main>
+    <article>
       Hey, I'm Jason. I'm currently creating this for my intro to front-end web development class.
       To return to my other projects follow the link below.
       <nav>
         <a href="portfolio.html">Portfolio</a>
       </nav>
-    </main>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/86/Maltese_puppy.jpeg" alt="pupper" width="500">
+      <br/>What a cute pupper
+    </article>
+    <footer>
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+    </footer>
   </body>
 </html>
