--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,13 @@
         <li><a href="about-me.html">About Me</a></li>
       </ul>
     </nav>
-    <main>
+    <article>
       <br/>
-      <h2>Screenshot and Snippets of Projects</h2>
-      Week 1-Semantic Elements<br/><img src="week-1-hw.jpg" alt="Week 1 HW Screenshot" width="500">
-
-    </main>
+      <h2>Screenshots and Snippets of Projects</h2>
+      Week 1-Semantic Elements<br/><img src="images/week-1-hw.jpg" alt="Week 1 HW Screenshot" width="500">
+    </article>
+    <footer>
+      Updated October 15, 2018 by Jason
+    </footer>
   </body>
 </html>
