--- a/about-me.html
+++ b/about-me.html
@@ -6,13 +6,14 @@
   </head>
   <body>
     <header>
-      <h1>About Me</h1>
+      <h1>This is an About Me</h1>
     </header>
     <article>
+      <h2>About Me is the header</h2>
       Hey, I'm Jason. I'm currently creating this for my intro to front-end web development class.
       To return to my other projects follow the link below.
       <nav>
-        <a href="portfolio.html">Portfolio</a>
+        <a href="index.html">Portfolio</a>
       </nav>
       <img src="https://upload.wikimedia.org/wikipedia/commons/8/86/Maltese_puppy.jpeg" alt="pupper" width="500">
       <br/>What a cute pupper
