Final Week 3 HW changes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset ="utf-8">
     <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css"
+    href="styles/stylesheet.css">
   </head>
   <body>
     <header>
@@ -16,8 +18,10 @@
     </nav>
     <article>
       <br/>
+      <br/>
       <h2>Screenshots and Snippets of Projects</h2>
-      Week 1-Semantic Elements<br/><img src="images/week-1-hw.jpg" alt="Week 1 HW Screenshot" width="500">
+      <h3>Week 1-Semantic Elements</h3>
+      <img src="images/week-1-hw.jpg" alt="Week 1 HW Screenshot" width="500">
     </article>
     <footer>
       Updated October 15, 2018 by Jason
