Added same stylesheet/css to all current html files

--- a/week-1-hw.html
+++ b/week-1-hw.html
@@ -9,6 +9,8 @@
     </style>
     <meta charset="utf-8">
     <title>Semantic Elements - HW 1</title>
+    <link rel="stylesheet" type="text/css"
+    href="styles/stylesheet.css">
   </head>
   <body>
     <header>
