--- a/about-me.html
+++ b/about-me.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>About Me</title>
+    <link rel="stylesheet" type="text/css"
+    href="styles/stylesheet.css">
   </head>
   <body>
     <header>
