fonts and icons

--- a/index.html
+++ b/index.html
@@ -5,23 +5,29 @@
     <title>Portfolio</title>
     <link rel="stylesheet" type="text/css"
     href="styles/stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Poor+Story|Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   </head>
   <body>
     <header>
-      <h1>List of Projects</h1>
+      <h1>List of Projects<i class="fas fa-dog"></i></h1>
     </header>
     <nav>
       <ul>
         <li><a href="week-1-hw.html">Week 1-Semantic Elements</a></li>
+        <li><a href="week-4-hw.html">Week 4-Are You Kitten Me Right Meow? This Code is a Cat-astrophe</a></li>
         <li><a href="about-me.html">About Me</a></li>
       </ul>
     </nav>
     <article>
       <br/>
       <br/>
-      <h2>Screenshots and Snippets of Projects</h2>
+      <h2>Screenshots and Snippets of Projects<i class="fas fa-cat"></i></h2>
       <h3>Week 1-Semantic Elements</h3>
-      <img src="images/week-1-hw.jpg" alt="Week 1 HW Screenshot" width="500">
+      <img src="images/week-1-hw.jpg" alt="Week 1 HW Screenshot">
+      <br/>
+      <h3>Week 4-Are You Kitten Me Right Meow? This Code is a Cat-astrophe</h3>
+      <img src="images/week-4-hw.jpg" alt"Week 4 HW Screenshot">
     </article>
     <footer>
       Updated October 15, 2018 by Jason
