--- a/about-me.html
+++ b/about-me.html
@@ -13,7 +13,7 @@
     <article>
       <h2>About Me is the header</h2>
       Hey, I'm Jason. I'm currently creating this for my intro to front-end web development class.
-      To return to my other projects follow the link below.
+      To return to my other projects follow the link below. LSU Alum-Geaux Tigers
       <nav>
         <a href="index.html">Portfolio</a>
       </nav>
