--- a/index.html
+++ b/index.html
@@ -20,14 +20,11 @@
       </ul>
     </nav>
     <article>
-      <br/>
-      <br/>
       <h2>Screenshots and Snippets of Projects<i class="fas fa-cat"></i></h2>
       <h3>Week 1-Semantic Elements</h3>
       <img src="images/week-1-hw.jpg" alt="Week 1 HW Screenshot">
-      <br/>
       <h3>Week 4-Are You Kitten Me Right Meow? This Code is a Cat-astrophe</h3>
-      <img src="images/week-4-hw.jpg" alt"Week 4 HW Screenshot">
+      <img src="images/week-4-hw.jpg" alt="Week 4 HW Screenshot">
     </article>
     <footer>
       Updated October 15, 2018 by Jason
